removed the code element. Turned out the pre element by itself should work. update some css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="code-section">
             <div class="code-window-header">code.js</div>
             <div class="code-edit">
-                <pre><code id="codePreview" class="language-javascript"></code></pre>
+                <pre id="codePreview" class="language-javascript"></pre>
                 <textarea id="codeInput" placeholder="Enter your code here..."></textarea>
             </div>
         </div>
@@ -22,8 +22,8 @@
     <script>
         var codeInput = document.getElementById("codeInput");
         var codePreview = document.getElementById("codePreview");
-        codeInput.addEventListener("input", function() {
-        codePreview.innerHTML = hljs.highlight(codeInput.value, { language: "javascript" }).value;
+        codeInput.addEventListener("input", function () {
+            codePreview.innerHTML = hljs.highlight(codeInput.value, { language: "javascript" }).value;
         });
     </script>
 </body>
