--- a/index.html
+++ b/index.html
@@ -6,23 +6,46 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="banner">
-        <h1>Beatiful Code Share</h1>
+        <h1>JS Code Snippet</h1>
     </div>
-    <div class="main-container">
-        <div class="code-section">
-            <div class="code-window-header">code.js</div>
-            <div class="code-edit">
-                <pre spellcheck="false" id="codePreview" class="language-javascript"></pre>
-                <textarea id="codeInput" placeholder="Enter your code here..."></textarea>
+    <div class="middle">
+        <div class="main-container">
+            <div class="code-section">
+                <div class="code-window-header">code.js</div>
+                <div class="code-edit">
+                    <pre spellcheck="false" id="codePreview" class="language-javascript"></pre>
+                    <textarea id="codeInput" placeholder="Enter your code here..."></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="copy-download-buttons">
+            <div class="button">
+                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M1 3C1 1.89543 1.89543 1 3 1H15C16.1046 1 17 1.89543 17 3V4H16V3C16 2.44772 15.5523 2 15 2H3C2.44772 2 2 2.44772 2 3V15C2 15.5523 2.44772 16 3 16H4V17H3C1.89543 17 1 16.1046 1 15V3Z"
+                        fill="#fff"></path>
+                    <rect x="7" y="7" width="64" height="64" rx="2" fill="#ffff"></rect>
+                </svg>
+            </div>
+            <div class="button">
+                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 11V17C1 18.6569 2.34315 20 4 20H20C21.6569 20 23 18.6569 23 17V11" stroke="#fff"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M13 2C13 1.44772 12.5523 1 12 1C11.4477 1 11 1.44772 11 2L11 12.3765L8.7328 9.93493C8.357 9.53022 7.72426 9.50679 7.31955 9.88259C6.91484 10.2584 6.89141 10.8911 7.26721 11.2958L11.2672 15.6035C11.4564 15.8073 11.7219 15.9231 12 15.9231C12.2781 15.9231 12.5436 15.8073 12.7328 15.6035L16.7328 11.2958C17.1086 10.8911 17.0852 10.2584 16.6805 9.88259C16.2757 9.50679 15.643 9.53022 15.2672 9.93493L13 12.3765L13 2Z"
+                        fill="#fff"></path>
+                </svg>
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer"><div style="color: white;">© 2025 <a style="color: white;" href="https://x.com/emad_kz">@emad_kz</a></div></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>
         var codeInput = document.getElementById("codeInput");
