Changed page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Beautiful Code Share!</title>
+    <title>Javascript Code Snippet</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
@@ -41,7 +41,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M13 2C13 1.44772 12.5523 1 12 1C11.4477 1 11 1.44772 11 2L11 12.3765L8.7328 9.93493C8.357 9.53022 7.72426 9.50679 7.31955 9.88259C6.91484 10.2584 6.89141 10.8911 7.26721 11.2958L11.2672 15.6035C11.4564 15.8073 11.7219 15.9231 12 15.9231C12.2781 15.9231 12.5436 15.8073 12.7328 15.6035L16.7328 11.2958C17.1086 10.8911 17.0852 10.2584 16.6805 9.88259C16.2757 9.50679 15.643 9.53022 15.2672 9.93493L13 12.3765L13 2Z"
                         fill="#fff"></path>
-                </svg> 
+                </svg>
             </div>
         </div>
     </div>
