Updated the banner and use a new tagline

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Javascript Code Snippet</title>
+    <title>Share your beautiful code, beautifully.</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
@@ -13,7 +13,8 @@
 
 <body>
     <div class="banner">
-        <h1>JS Code Snippet</h1>
+        <h1>Share your beautiful code, <span>beautifully.</span></h1>
+        <div class="tagline">A quick tool for sharing your code snippets with personality. Made by Emad. ✌️</div>
     </div>
     <div class="middle">
         <div class="main-container">
