--- a/index.html
+++ b/index.html
@@ -27,13 +27,27 @@
             </div>
         </div>
         <div class="toolbar">
-            <div class="bgcolor-toolbar">
+            <div class="vertical-toolbar">
                 <div class="bgcolor-selector gradient1"></div>
                 <div class="bgcolor-selector gradient2"></div>
                 <div class="bgcolor-selector gradient3"></div>
                 <div class="bgcolor-selector gradient4"></div>
                 <div class="bgcolor-selector gradient5"></div>
                 <div class="bgcolor-selector gradient6"></div>
+            </div>
+            <div class="plus-sign">
+                +
+            </div>
+            <div class="vertical-toolbar">
+                <div class="bgcolor-selector gradient1"></div>
+                <div class="bgcolor-selector gradient1"></div>
+            </div>
+            <div class="plus-sign">
+                =
+            </div>
+            <div class="vertical-toolbar">
+                <div class="bgcolor-selector gradient1"></div>
+                <div class="bgcolor-selector gradient1"></div>
             </div>
         </div>
     </div>
