Added buttons icons and align few elements

--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
                 +
             </div>
             <div class="vertical-toolbar">
-                <div class="bgcolor-selector gradient1"></div>
-                <div class="bgcolor-selector gradient1"></div>
+                <div class="bgcolor-selector darkmode"></div>
+                <div class="bgcolor-selector lightmode"></div>
             </div>
             <div class="plus-sign">
                 =
             </div>
             <div class="vertical-toolbar">
-                <div class="bgcolor-selector gradient1"></div>
-                <div class="bgcolor-selector gradient1"></div>
+                <div class="bgcolor-selector download"></div>
+                <div class="bgcolor-selector copy"></div>
             </div>
         </div>
     </div>
     <div class="footer">
+        <span style="margin: 2px;">Icons by</span>
+        <a href="https://icons8.com"><img width="15px" src="img/logo-icon8.svg" /></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>
