Added vertical lables

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="toolbar">
-            <div class="vertical-toolbar">
+            <div class="vertical-toolbar color-picker">
                 <div class="bgcolor-selector gradient1"></div>
                 <div class="bgcolor-selector gradient2"></div>
                 <div class="bgcolor-selector gradient3"></div>
@@ -38,16 +38,24 @@
             <div class="plus-sign">
                 +
             </div>
-            <div class="vertical-toolbar">
+            <div class="vertical-toolbar theme-mode">
                 <div class="bgcolor-selector darkmode"></div>
                 <div class="bgcolor-selector lightmode"></div>
             </div>
-            <div class="plus-sign">
+            <div class="vertical-label theme-mode">
+                <div>Dark mode</div>
+                <div>Light mode</div>
+            </div>
+            <div class="equal-sign">
                 =
             </div>
-            <div class="vertical-toolbar">
+            <div class="vertical-toolbar action-buttons">
                 <div class="bgcolor-selector download"></div>
                 <div class="bgcolor-selector copy"></div>
+            </div>
+            <div class="vertical-label action-buttons">
+                <div>Download</div>
+                <div>Copy to clipboard</div>
             </div>
         </div>
     </div>
