Updated changeBackground method to take event and retrieve className from the event.target

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </div>
         <div class="toolbar">
             <div class="vertical-toolbar color-picker">
-                <div class="bgcolor-selector gradient1" onclick="changeBackground('gradient1')"></div>
-                <div class="bgcolor-selector gradient2" onclick="changeBackground('gradient2')"></div>
-                <div class="bgcolor-selector gradient3" onclick="changeBackground('gradient3')"></div>
-                <div class="bgcolor-selector gradient4" onclick="changeBackground('gradient4')"></div>
-                <div class="bgcolor-selector gradient5" onclick="changeBackground('gradient5')"></div>
-                <div class="bgcolor-selector gradient6" onclick="changeBackground('gradient6')"></div>
+                <div class="bgcolor-selector gradient1" onclick="changeBackground(event)"></div>
+                <div class="bgcolor-selector gradient2" onclick="changeBackground(event)"></div>
+                <div class="bgcolor-selector gradient3" onclick="changeBackground(event)"></div>
+                <div class="bgcolor-selector gradient4" onclick="changeBackground(event)"></div>
+                <div class="bgcolor-selector gradient5" onclick="changeBackground(event)"></div>
+                <div class="bgcolor-selector gradient6" onclick="changeBackground(event)"></div>
             </div>
             <div class="plus-sign">
                 +
