Selected active background color picker when user click on it

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
         </div>
         <div class="toolbar">
-            <div class="vertical-toolbar color-picker">
-                <div class="bgcolor-selector gradient1" onclick="changeBackground(event)"></div>
+            <div id="color-picker" class="vertical-toolbar">
+                <div class="bgcolor-selector gradient1 active" onclick="changeBackground(event)"></div>
                 <div class="bgcolor-selector gradient2" onclick="changeBackground(event)"></div>
                 <div class="bgcolor-selector gradient3" onclick="changeBackground(event)"></div>
                 <div class="bgcolor-selector gradient4" onclick="changeBackground(event)"></div>
