Implemented download code.png by using html2canvas library

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 =
             </div>
             <div class="vertical-toolbar action-buttons">
-                <div class="bgcolor-selector download"></div>
+                <div onclick="download()" class="bgcolor-selector download"></div>
                 <div class="bgcolor-selector copy"></div>
             </div>
             <div class="vertical-label action-buttons">
@@ -70,6 +70,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script src="script.js"></script>
 </body>
 
