--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="vertical-toolbar action-buttons">
                 <div onclick="download()" class="bgcolor-selector download"></div>
-                <div class="bgcolor-selector copy"></div>
+                <div onclick="copyToClipboard()" class="bgcolor-selector copy"></div>
             </div>
             <div class="vertical-label action-buttons">
                 <div>Download</div>
