added messages for copying to clipboard

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
             </div>
         </div>
         <div class="footer">
-            <span style="margin: 2px;">Icons by</span>
-            <a href="https://icons8.com"><img width="15px" src="img/logo-icon8.svg" /></a>
+            <div id="messages">
+            </div>
+            <div id="icon-credit">
+                <span>Icons by</span>
+                <a href="https://icons8.com"><img width="15px" src="img/logo-icon8.svg" /></a>
+            </div>
         </div>
     </div>
     <div class="right-side">
