Improved the visual on the messaging and also show message on dowloading

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             </div>
         </div>
         <div class="footer">
-            <div id="messages">
+            <div class="message-container">
+                <div id="messages"></div>
             </div>
             <div id="icon-credit">
                 <span>Icons by</span>
