Implement dark/light mode

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="dark">
     <div class="left-side"></div>
     <div class="center-side">
         <div class="header">
@@ -54,8 +54,8 @@
                 +
             </div>
             <div class="vertical-toolbar theme-mode">
-                <div class="bgcolor-selector darkmode"></div>
-                <div class="bgcolor-selector lightmode"></div>
+                <div onclick="goDark()" class="bgcolor-selector darkmode"></div>
+                <div onClick="goLight()" class="bgcolor-selector lightmode"></div>
             </div>
             <div class="vertical-label theme-mode">
                 <div>Dark mode</div>
