Added buttons to the code window

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         <div class="middle">
             <div id="main-container" class="gradient1">
                 <div class="code-section">
-                    <div class="code-window-header">code.js</div>
+                    <div class="code-window-header">
+                        <div class="butotns">
+                            <div class="close-button"></div>
+                            <div class="minimize-button"></div>
+                            <div class="fullscreen-button"></div>
+                        </div>
+                        <spn class="code-file-name">code.js</spn>
+                    </div>
                     <div class="code-edit">
                         <pre spellcheck="false" id="codePreview" class="language-javascript"></pre>
                         <textarea id="codeInput" placeholder="Enter your code here..."></textarea>
