typo in class name for buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="main-container" class="gradient1">
                 <div class="code-section">
                     <div class="code-window-header">
-                        <div class="butotns">
+                        <div class="buttons">
                             <div class="close-button"></div>
                             <div class="minimize-button"></div>
                             <div class="fullscreen-button"></div>
