Added active state class to dark and light button

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 +
             </div>
             <div class="vertical-toolbar theme-mode">
-                <div onclick="goDark()" class="bgcolor-selector darkmode"></div>
-                <div onClick="goLight()" class="bgcolor-selector lightmode"></div>
+                <div id="darkButton" onclick="goDark()" class="bgcolor-selector darkmode"></div>
+                <div id="lightButton" onClick="goLight()" class="bgcolor-selector lightmode"></div>
             </div>
             <div class="vertical-label theme-mode">
                 <div>Dark mode</div>
