added active to darkMode by default

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 +
             </div>
             <div class="vertical-toolbar theme-mode">
-                <div id="darkButton" onclick="goDark()" class="bgcolor-selector darkmode"></div>
+                <div id="darkButton" onclick="goDark()" class="bgcolor-selector darkmode active"></div>
                 <div id="lightButton" onClick="goLight()" class="bgcolor-selector lightmode"></div>
             </div>
             <div class="vertical-label theme-mode">
